--- a/public/index.html
+++ b/public/index.html
@@ -49,11 +49,13 @@
     <code>
         curl -X POST <span class="url"></span>api/verify \
         -H "X-API-Key: your-api-key" \
+        -H "Content-Type: application/json" \
         -d '{"x402Version": 1, "paymentPayload": {...}, "paymentRequirements": {...}}'
     </code>
     <p>An example request to the <b>/api/verify</b> endpoint (<b>without api key</b>):</p>
     <code>
         curl -X POST <span class="url"></span>api/verify \
+        -H "Content-Type: application/json" \
         -d '{"x402Version": 1, "paymentPayload": {...}, "paymentRequirements": {...}}'
     </code>
     <p>An example response from the <b>/api/verify</b> endpoint (<b>valid</b>):</p>
@@ -120,7 +122,7 @@
     <h2>More Information</h2>
     <p>To learn more about this service, please see the <a href="https://github.com/raid-guild/x402-facilitator-go" target="_blank">x402-facilitator-go</a> repository.</p>
     <script>
-        document.querySelectorAll(".url").forEach(e => e.innerHTML = window.location.href);
+        document.querySelectorAll(".url").forEach(e => e.innerHTML = window.location.origin + '/');
         document.querySelectorAll("code").forEach(code => {
             var lines = code.textContent.split('\n');
             var matches = lines.find(line => line.trim())?.match(/^[\s\t]+/);
