--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,7 @@
     </code>
     <p>An example request to the <b>/verify</b> endpoint (<b>without API key</b>):</p>
     <code>
-        curl -X POST <span class="url"></span>api/verify \
+        curl -X POST <span class="url"></span>verify \
         -H "Content-Type: application/json" \
         -d '{"x402Version": 1, "paymentPayload": {...}, "paymentRequirements": {...}}'
     </code>
@@ -89,20 +89,20 @@
         failed to get token balance
     </code>
     <h2>Settle Examples</h2>
-    <p>An example request to the <b>/api/settle</b> endpoint (<b>with API key</b>):</p>
+    <p>An example request to the <b>/settle</b> endpoint (<b>with API key</b>):</p>
     <code>
-        curl -X POST <span class="url"></span>api/settle \
+        curl -X POST <span class="url"></span>settle \
         -H "X-API-Key: your-api-key" \
         -H "Content-Type: application/json" \
         -d '{"x402Version": 1, "paymentPayload": {...}, "paymentRequirements": {...}}'
     </code>
-    <p>An example request to the <b>/api/settle</b> endpoint (<b>without API key</b>):</p>
+    <p>An example request to the <b>/settle</b> endpoint (<b>without API key</b>):</p>
     <code>
-        curl -X POST <span class="url"></span>api/settle \
+        curl -X POST <span class="url"></span>settle \
         -H "Content-Type: application/json" \
         -d '{"x402Version": 1, "paymentPayload": {...}, "paymentRequirements": {...}}'
     </code>
-    <p>An example response from the <b>/api/settle</b> endpoint (<b>200 OK</b> - success):</p>
+    <p>An example response from the <b>/settle</b> endpoint (<b>200 OK</b> - success):</p>
     <code>
         {
             "scheme": "exact",
@@ -111,7 +111,7 @@
             "transaction": "0x..."
         }
     </code>
-    <p>An example response from the <b>/api/settle</b> endpoint (<b>200 OK</b> - failed):</p>
+    <p>An example response from the <b>/settle</b> endpoint (<b>200 OK</b> - failed):</p>
     <code>
         {
             "scheme": "exact",
@@ -120,24 +120,24 @@
             "errorReason": "invalid_authorization_signature"
         }
     </code>
-    <p>An example response from the <b>/api/settle</b> endpoint (<b>401 Unauthorized</b>):</p>
+    <p>An example response from the <b>/settle</b> endpoint (<b>401 Unauthorized</b>):</p>
     <code>
         unauthorized
     </code>
-    <p>An example response from the <b>/api/settle</b> endpoint (<b>400 Bad Request</b>):</p>
+    <p>An example response from the <b>/settle</b> endpoint (<b>400 Bad Request</b>):</p>
     <code>
         invalid character 'x' looking for beginning of value
     </code>
-    <p>An example response from the <b>/api/settle</b> endpoint (<b>500 Internal Server Error</b>):</p>
+    <p>An example response from the <b>/settle</b> endpoint (<b>500 Internal Server Error</b>):</p>
     <code>
         failed to send transaction
     </code>
     <h2>Supported Examples</h2>
-    <p>An example request to the <b>api/supported</b> endpoint:</p>
+    <p>An example request to the <b>/supported</b> endpoint:</p>
     <code>
-        curl -X GET <span class="url"></span>api/supported
+        curl -X GET <span class="url"></span>supported
     </code>
-    <p>An example response from the <b>api/supported</b> endpoint:</p>
+    <p>An example response from the <b>/supported</b> endpoint:</p>
     <code>
         {
             "kinds": [
